NEW 220342
visibility:hidden fails to hide composited iframe
https://bugs.webkit.org/show_bug.cgi?id=220342
Summary visibility:hidden fails to hide composited iframe
Simon Fraser (smfr)
Reported 2021-01-05 14:36:13 PST
Created attachment 417037 [details] Testcase See testcase
Attachments
Testcase (1013 bytes, text/html)
2021-01-05 14:36 PST, Simon Fraser (smfr)
no flags
Patch (4.17 KB, patch)
2023-02-10 04:09 PST, Rob Buis
ews-feeder: commit-queue-
Patch (4.21 KB, patch)
2023-02-10 06:37 PST, Rob Buis
ews-feeder: commit-queue-
Patch (9.40 KB, patch)
2023-02-10 10:15 PST, Rob Buis
no flags
Patch (4.36 KB, patch)
2023-02-11 10:58 PST, Rob Buis
no flags
Patch (7.44 KB, patch)
2023-02-12 05:29 PST, Rob Buis
no flags
Patch (7.55 KB, patch)
2023-02-12 07:22 PST, Rob Buis
no flags
Radar WebKit Bug Importer
Comment 1 2021-01-12 14:37:13 PST
Rob Buis
Comment 2 2023-02-10 04:09:47 PST
Rob Buis
Comment 3 2023-02-10 06:37:29 PST
Rob Buis
Comment 4 2023-02-10 10:15:13 PST
Rob Buis
Comment 5 2023-02-11 10:58:02 PST
Rob Buis
Comment 6 2023-02-12 05:29:50 PST
Rob Buis
Comment 7 2023-02-12 07:22:45 PST
Rob Buis
Comment 8 2023-02-13 07:09:53 PST
Ahmad Saleem
Comment 9 2023-06-19 03:44:10 PDT
I am still able to reproduce this bug using attached Test Case on WebKit ToT and it seems PR is awaiting review. Just came across this so thought to comment. Ignore if we are doing some other revamp in code soon.
Note You need to log in before you can comment on or make changes to this bug.