visibility:hidden fails to hide composited iframe https://bugs.webkit.org/show_bug.cgi?id=220342

Reviewed by NOBODY (OOPS!).

Turn off compositing for subframes when they are hidden through
visibility:hidden.

* LayoutTests/compositing/iframes/composited-iframe-visibility-hidden-ancestor-expected.html: Added.
* LayoutTests/compositing/iframes/composited-iframe-visibility-hidden-ancestor.html: Added.
* LayoutTests/compositing/iframes/composited-iframe-visibility-hidden-expected.html: Added.
* LayoutTests/compositing/iframes/composited-iframe-visibility-hidden.html: Added.
* LayoutTests/compositing/iframes/composited-iframe-visibility-toggled-expected.html: Added.
* LayoutTests/compositing/iframes/composited-iframe-visibility-toggled.html: Added.
* Source/WebCore/rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::requiresCompositingLayer const):
(WebCore::RenderLayerCompositor::isHiddenSubframe const):
(WebCore::RenderLayerCompositor::requiresCompositingForFrame const):
* Source/WebCore/rendering/RenderLayerCompositor.h: